infra/kubernetes/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: chat.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/chat/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-srv
                port:
                  number: 3000
          - path: /socket.io/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-srv
                port:
                  number: 3000
